@@ -133,8 +133,10 @@ void platform_process_messages();
 int platform_scancode_to_rct_keycode(int sdl_key);
 void platform_start_text_input(utf8 *buffer, int max_length);
 void platform_stop_text_input();
-void platform_get_date(rct2_date *out_date);
-void platform_get_time(rct2_time *out_time);
+void platform_get_date_utc(rct2_date *out_date);
+void platform_get_time_utc(rct2_time *out_time);
+void platform_get_date_local(rct2_date *out_date);
+void platform_get_time_local(rct2_time *out_time);
 
 // Platform specific definitions
 void platform_get_exe_path(utf8 *outPath);
