@@ -19,6 +19,7 @@
 - Feature: Objects are scanned from the user directory as well as the RCT2 directory.
 - Feature: Objects directory is scanned recursively.
 - Improve: Performance and reliability of loading objects.
+- Improve: Screenshots are now saved with the name of the park and the current date and time.
 - Removed: BMP screenshots.
 - Removed: Intamin and Phoenix easter eggs.
 - Fix: [#1038] Guest List is out of order.
